# machine-control-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/backend/: README.md  pyproject.toml
apps/backend/docs/: ADR-001-architecture.md  ADR-002-code-documentation.md  ADR-003-dependency-injection.md  ADR-005-websocket-communication.md
apps/backend/src/application/: machine_service.py
apps/backend/src/infrastructure/adapters/: motor_adapter.py  servo_adapter.py  temperature_adapter.py
apps/backend/src/infrastructure/api/: dependencies.py  main.py
apps/backend/tests/domain/: test_port_interface.py
apps/webapp/: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/webapp/docs/: ADR-001-frontend-stack.md  ADR-002-component-architecture.md
apps/webapp/src/: App.css  App.tsx
apps/webapp/src/components/: index.ts
apps/webapp/src/config/: api.ts  index.ts
apps/webapp/src/hooks/: index.ts  useDevice.ts  useWebSocket.ts
apps/webapp/src/store/: deviceStore.ts  index.ts
apps/webapp/src/types/: devices.ts  index.ts
apps/webapp/src/utils/: index.ts
config/: devices.yaml
docs/: ADR-001-architecture.md  ADR-002-code-documentation.md  ADR-003-dependency-injection.md  ADR-004-web-api-layer.md
src/application/: __init__.py  machine_service.py
src/domain/ports/: io_device.py
src/infrastructure/adapters/: motor_adapter.py  servo_adapter.py  temperature_adapter.py  valve_adapter.py
src/infrastructure/api/: __init__.py  main.py
src/infrastructure/api/models/: responses.py
src/infrastructure/api/routers/: devices.py
src/infrastructure/di/: __init__.py  containers.py  factory.py
tests/: conftest.py
tests/application/: test_machine_service.py
tests/infrastructure/adapters/: test_motor_adapter.py  test_servo_adapter.py  test_temperature_adapter.py
tests/infrastructure/adapters/fixtures/: valve_fixtures.py
tests/infrastructure/api/: test_websockets.py
(+32 files in other folders)
