[project]
name = "valiot-technical-test"
version = "0.1.0"
description = "Valiot.io Technical Test"
authors = [
    {name = "Ernesto Jiménez Villaseñor",email = "ernjivi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "dependency-injector[yaml] (>=4.48.1,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-httpx = "^0.35.0"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
addopts = "-q"

