[project]
name = "valiot-technical-test"
version = "0.1.0"
description = "Valiot.io Technical Test"
authors = [
    {name = "Ernesto Jiménez Villaseñor",email = "ernjivi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "dependency-injector[yaml] (>=4.48.1,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-httpx = "^0.35.0"
pytest-cov = "^6.2.1"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "src/infrastructure/di/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

